--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "material-start",
   "private": true,
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A starter project for AngularJS Material",
   "repository": "https://github.com/angular/material-start",
   "licenses": [
@@ -11,21 +11,21 @@
     }
   ],
   "peerDependencies": {
-    "angular": "@>=1.3 <1.6",
-    "angular-animate": "^@>=1.3 <1.6",
-    "angular-aria": "@>=1.3 <1.6",
-    "angular-messages": "@>=1.3 <1.6"
+    "angular": "1.8.3",
+    "angular-animate": "1.8.3",
+    "angular-aria": "1.8.3",
+    "angular-messages": "1.8.3"
   },
   "dependencies": {
-    "angular": "^1.5.5",
-    "angular-animate": "^1.5.5",
-    "angular-aria": "^1.5.5",
-    "angular-messages": "^1.5.5",
-    "angular-material": "git+https://github.com/angular/bower-material.git#master"
+    "angular": "1.8.3",
+    "angular-animate": "1.8.3",
+    "angular-aria": "1.8.3",
+    "angular-messages": "1.8.3",
+    "angular-material": "1.2.5"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.9",
-    "live-server": "^0.9.1"
+    "angular-mocks": "1.8.3",
+    "live-server": "1.2.2"
   },
   "scripts": {
     "prestart": "npm update"
